--- a/cst438_register/src/main/resources/application.properties
+++ b/cst438_register/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# server.port = 8080
-# server.servlet.session.persistent=false
+server.port = 8080
+server.servlet.session.persistent=false
 
 # gradebook service
 gradebook.url = http://localhost:8081
@@ -9,15 +9,15 @@ registration.url = http://localhost:8080
 registration.service = default
 
 # database properties
-# spring.datasource.url = jdbc:mysql://localhost:3306/register
-# spring.datasource.username = root
-# spring.datasource.password = dw4$Database
+spring.datasource.url = jdbc:mysql://localhost:3306/register
+spring.datasource.username = root
+spring.datasource.password = mySQLp@$$w0rd
 # spring.jpa.hibernate.ddl-auto = update
-# spring.jpa.show-sql = true
+spring.jpa.show-sql = true
 
-server.servlet.session.persistent=false
-spring.jpa.hibernate.ddl-auto = update
-spring.datasource.hikari.maximum-pool-size=5
+#server.servlet.session.persistent=false
+#spring.jpa.hibernate.ddl-auto = update
+#spring.datasource.hikari.maximum-pool-size=5
 
 # debug = true
 # logging.level.org.springframework.security = TRACE
