--- a/cst438_register/src/main/resources/application.properties
+++ b/cst438_register/src/main/resources/application.properties
@@ -9,11 +9,11 @@ registration.url = http://localhost:8080
 registration.service = default
 
 # database properties
-# spring.datasource.url = jdbc:mysql://localhost:3306/register
-# spring.datasource.username = root
-# spring.datasource.password = dw4$Database
+ spring.datasource.url = jdbc:mysql://localhost:3306/register
+ spring.datasource.username = root
+ spring.datasource.password = mySQLp@$$w0rd
 # spring.jpa.hibernate.ddl-auto = update
-# spring.jpa.show-sql = true
+ spring.jpa.show-sql = true
 
 server.servlet.session.persistent=false
 spring.jpa.hibernate.ddl-auto = update
