--- a/cst438_register/src/main/resources/application.properties
+++ b/cst438_register/src/main/resources/application.properties
@@ -3,15 +3,15 @@
 
 # gradebook service
 gradebook.url = http://localhost:8081
-gradebook.service = default
+gradebook.service = MQ
 # registration service
 registration.url = http://localhost:8080
-registration.service = default
+registration.service = MQ
 
 # database properties
  spring.datasource.url = jdbc:mysql://localhost:3306/register
  spring.datasource.username = root
- spring.datasource.password = mySQLp@$$w0rd
+ spring.datasource.password = mySQL_passw0rd
 # spring.jpa.hibernate.ddl-auto = update
  spring.jpa.show-sql = true
 
